fix: convert png images to webp

--- a/apparel/blue-apparel/index.html
+++ b/apparel/blue-apparel/index.html
@@ -100,20 +100,20 @@
       <div class="content">
         <div class="left">
           <div class="selected-image-preview">
-            <img src="https://victorjoey.github.io/Sesshin/assets/images/blue-sweatshirt.png" alt="blue sweatshirt" />
+            <img src="https://victorjoey.github.io/Sesshin/assets/images/blue-sweatshirt.webp" alt="blue sweatshirt" />
           </div>
         </div>
         <div class="right">
           <div class="image-list">
             <div class="img-container active">
-              <img src="https://victorjoey.github.io/Sesshin/assets/images/blue-sweatshirt.png" alt="blue hooodie"
+              <img src="https://victorjoey.github.io/Sesshin/assets/images/blue-sweatshirt.webp" alt="blue hooodie"
                 class="sweatshirt" />
             </div>
             <div class="img-container">
-              <img src="https://victorjoey.github.io/Sesshin/assets/images/blue-hat.png" alt="blue hat" class="hat" />
+              <img src="https://victorjoey.github.io/Sesshin/assets/images/blue-hat.webp" alt="blue hat" class="hat" />
             </div>
             <div class="img-container">
-              <img src="https://victorjoey.github.io/Sesshin/assets/images/blue-beanie.png" alt="blue beanie"
+              <img src="https://victorjoey.github.io/Sesshin/assets/images/blue-beanie.webp" alt="blue beanie"
                 class="beanie" />
             </div>
           </div>
