--- a/apparel/white-apparel/index.html
+++ b/apparel/white-apparel/index.html
@@ -100,7 +100,7 @@
       <div class="content">
         <div class="left">
           <div class="selected-image-preview">
-            <img src="https://victorjoey.github.io/Sesshin/assets/images/white-hat.png" alt="white sweatshirt" />
+            <img src="https://victorjoey.github.io/Sesshin/assets/images/white-hat.webp" alt="white sweatshirt" />
           </div>
         </div>
         <div class="right">
@@ -113,7 +113,8 @@
                   />
                 </div> -->
             <div class="img-container active">
-              <img src="https://victorjoey.github.io/Sesshin/assets/images/white-hat.png" alt="white hat" class="hat" />
+              <img src="https://victorjoey.github.io/Sesshin/assets/images/white-hat.webp" alt="white hat"
+                class="hat" />
             </div>
             <!-- <div class="img-container">
                   <img
@@ -136,7 +137,8 @@
       <div class="row top-footer">
         <div class="flex-col">
           <a href="/">
-            <img style="width: 50%" src="https://victorjoey.github.io/Sesshin/assets/img/sessh_circle.png" alt="" srcset="" />
+            <img style="width: 50%" src="https://victorjoey.github.io/Sesshin/assets/img/sessh_circle.png" alt=""
+              srcset="" />
           </a>
         </div>
         <div class="flex-col">
