--- a/featured-strains/index.html
+++ b/featured-strains/index.html
@@ -105,19 +105,19 @@
     <section class="featured-strains-section">
       <div class="featured-strains items container" id="container">
         <a href="#strains-description" class="featured-strains__container active" data-tab-value="#dessert">
-          <img src="../assets/images/dessert-0.png" alt="" draggable="false" />
+          <img src="../assets/images/dessert-0.webp" alt="" draggable="false" />
           <img src="../assets/images/dessert-1.png" alt="" draggable="false" class="dessert" />
         </a>
         <a href="#strains-description" class="featured-strains__container" data-tab-value="#dough-lato">
-          <img src="../assets/images/dough-lato-0.png" alt="" draggable="false" />
+          <img src="../assets/images/dough-lato-0.webp" alt="" draggable="false" />
           <img src="../assets/images/dough-lato-1.png" alt="" draggable="false" class="dough-lato" />
         </a>
         <a href="#strains-description" class="featured-strains__container" data-tab-value="#gelato">
-          <img src="../assets/images/gelato-0.png" alt="" draggable="false" />
+          <img src="../assets/images/gelato-0.webp" alt="" draggable="false" />
           <img src="../assets/images/gelato-1.png" alt="" draggable="false" class="gelato" />
         </a>
         <a href="#strains-description" class="featured-strains__container" data-tab-value="#sour-diesel">
-          <img src="../assets/images/sour-diesel-0.png" alt="" draggable="false" />
+          <img src="../assets/images/sour-diesel-0.webp" alt="" draggable="false" />
           <img src="../assets/images/sour-diesel-1.png" alt="" draggable="false" class="sour-diesel" />
         </a>
       </div>
@@ -163,7 +163,7 @@
           </p>
           <div class="strains-description__flex mt-40 packaging-items">
             <span>
-              <img src="../assets/images/flower-jar.png" alt="flower jar" class="flower-img" />
+              <img src="../assets/images/flower-jar.webp" alt="flower jar" class="flower-img" />
               <p>Flower</p>
             </span>
             <span>
@@ -206,7 +206,7 @@
           </p>
           <div class="strains-description__flex mt-40 packaging-items">
             <span>
-              <img src="../assets/images/flower-jar.png" alt="flower jar" class="flower-img" />
+              <img src="../assets/images/flower-jar.webp" alt="flower jar" class="flower-img" />
               <p>Flower</p>
             </span>
             <span>
@@ -249,7 +249,7 @@
           </p>
           <div class="strains-description__flex mt-40 packaging-items">
             <span>
-              <img src="../assets/images/flower-jar.png" alt="flower jar" class="flower-img" />
+              <img src="../assets/images/flower-jar.webp" alt="flower jar" class="flower-img" />
               <p>Flower</p>
             </span>
             <span>
@@ -292,7 +292,7 @@
           </p>
           <div class="strains-description__flex mt-40 packaging-items">
             <span>
-              <img src="../assets/images/flower-jar.png" alt="flower jar" class="flower-img" />
+              <img src="../assets/images/flower-jar.webp" alt="flower jar" class="flower-img" />
               <p>Flower</p>
             </span>
             <span>
