--- a/apparel/index.html
+++ b/apparel/index.html
@@ -105,28 +105,28 @@
       <div class="apparel__color-cards">
         <div class="black card">
           <a href="./black-apparel/" title="Go to the apparel page" class="preview">
-            <img src="../assets/images/black-hat.png" alt="black hat" class="blackSlides" />
-            <img src="../assets/images/black-beanie.png" alt="black beanie" class="blackSlides" />
-            <img src="../assets/images/black-sweatshirt.png" alt="black sweatshirt" class="blackSlides" />
+            <img src="../assets/images/black-hat.webp" alt="black hat" class="blackSlides" />
+            <img src="../assets/images/black-beanie.webp" alt="black beanie" class="blackSlides" />
+            <img src="../assets/images/black-sweatshirt.webp" alt="black sweatshirt" class="blackSlides" />
           </a>
         </div>
         <div class="blue card">
           <a href="./blue-apparel/" title="Go to the apparel page" class="preview">
-            <img src="../assets/images/blue-hat.png" alt="blue hat" class="blueSlides" />
-            <img src="../assets/images/blue-beanie.png" alt="blue beanie" class="blueSlides" />
-            <img src="../assets/images/blue-sweatshirt.png" alt="blue sweatshirt" class="blueSlides" />
+            <img src="../assets/images/blue-hat.webp" alt="blue hat" class="blueSlides" />
+            <img src="../assets/images/blue-beanie.webp" alt="blue beanie" class="blueSlides" />
+            <img src="../assets/images/blue-sweatshirt.webp" alt="blue sweatshirt" class="blueSlides" />
           </a>
         </div>
         <div class="tan card">
           <a href="./tan-apparel/" title="Go to the apparel page" class="preview">
-            <img src="../assets/images/tan-hat.png" alt="tan hat" class="tanSlides" />
-            <img src="../assets/images/tan-beanie.png" alt="tan beanie" class="tanSlides" />
-            <img src="../assets/images/tan-sweatshirt.png" alt="tan sweatshirt" class="tanSlides" />
+            <img src="../assets/images/tan-hat.webp" alt="tan hat" class="tanSlides" />
+            <img src="../assets/images/tan-beanie.webp" alt="tan beanie" class="tanSlides" />
+            <img src="../assets/images/tan-sweatshirt.webp" alt="tan sweatshirt" class="tanSlides" />
           </a>
         </div>
         <div class="white card">
           <a href="./white-apparel/" title="Go to the apparel page" class="preview">
-            <img src="../assets/images/white-hat.png" alt="white hat" class="whiteSlides" />
+            <img src="../assets/images/white-hat.webp" alt="white hat" class="whiteSlides" />
           </a>
         </div>
       </div>
